--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=https://bookshopapi-hp4q.onrender.com
+VITE_BASE_URL=https://bookshopapi-hp4q.onrender.com/
 
 # VITE_BASE_URL=http://localhost:3000/
